Installer registration main sent

--- a/public/assets/admin/css/ekka.css
+++ b/public/assets/admin/css/ekka.css
@@ -21223,7 +21223,7 @@ div.copied {
   margin-right: auto;
   overflow: hidden;
   max-width: 130px;
-  color: white;
+  color: #442f2f;
   font-size: 15px;  
   text-overflow: ellipsis;
   white-space: nowrap;
