--- a/public/assets/admin/css/ekka.css
+++ b/public/assets/admin/css/ekka.css
@@ -21684,7 +21684,7 @@ div.copied {
 }
 
 .ec-sidebar-fixed-offcanvas.sidebar-collapse .ec-page-wrapper {
-  padding-left: 0;
+  /* padding-left: 0; */
 }
 @media (min-width: 768px) {
   .ec-sidebar-fixed-offcanvas.sidebar-collapse .sidebar-footer {
