Bank details add

--- a/public/assets/admin/css/ekka.css
+++ b/public/assets/admin/css/ekka.css
@@ -4150,6 +4150,9 @@ textarea.form-control-lg {
   .navbar-expand-lg .navbar-nav .nav-link {
     padding-right: 0.5rem;
     padding-left: 0.5rem;
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
   }
   .navbar-expand-lg .navbar-nav-scroll {
     overflow: visible;
