--- a/public/assets/admin/css/ekka.css
+++ b/public/assets/admin/css/ekka.css
@@ -21869,7 +21869,7 @@ div.copied {
   border-right: 1px solid #f3f3f3;
 }
 .ec-sidebar-light .sidebar .sub-menu {
-  background-color: #f7f7f7;
+  background-color: #465a7a;
 }
 .ec-sidebar-light .sidebar .sub-menu > li > a {
   color: #8a909d;
