--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -61,6 +61,21 @@
     padding: 16px 0 !important;
   }
 
+  .icons{
+    margin-left: 0;
+  }
+
+
+  .offcanvas .navbar-nav .nav-item .nav-link {
+    font-family: var(--fnt-family-secondary);
+    font-size: 19px;
+    line-height: 18px;
+    color: var(--color-secondary);
+    font-weight: 500;
+    margin-top: 10px;
+    text-align: left;
+  }
+
   .banners h2 {
     font-size: 26px;
     line-height: 1.3;
