--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -66,13 +66,13 @@ a {
 /* menue */
 nav {
   background-color: var(--color-light);
-  padding-top: 35px !important;
-  padding-bottom: 35px !important;
+  padding-top: 20px !important;
+  padding-bottom: 16px !important;
 }
 
 nav .navbar-nav .nav-item .nav-link {
   font-family: var(--fnt-family-secondary);
-  font-size: 19px;
+  font-size: 16px;
   line-height: 18px;
   color: var(--color-secondary);
   font-weight: 500;
@@ -124,6 +124,10 @@ nav .icons .btns2 {
   color: var(--color-light);
   font-weight: 600;
   padding: 10px 20px;
+}
+
+.icons{
+  margin-left: 8rem;
 }
 
 /* banners */
@@ -1969,7 +1973,7 @@ text-decoration: none;
 .blogsec .blog-img img {
   width: 100%;
   height: 200px;
-  object-fit: cover;
+  /* object-fit: cover; */
 }
 
 .blogsec .card h3 {
