--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2690,6 +2690,26 @@ box-shadow: -1px 0px 69px -31px rgba(0,0,0,0.62);
     background-color: var(--color-primary);
     border-color: var(--color-primary);
 }
+
+.instruction__widget{
+  position: sticky;
+  top: 0;
+  background:#fff;
+  text-align: center;
+  padding:30px;
+  box-shadow: -1px 0px 69px -31px rgba(0,0,0,0.3);
+-webkit-box-shadow: -1px 0px 69px -31px rgba(0,0,0,0.3);
+-moz-box-shadow: -1px 0px 69px -31px rgba(0,0,0,0.3);
+}
+.instruction__widget h3 {
+  
+margin-bottom: 20px;
+  background: var(--color-primary); color:#fff; padding:10px 15px;
+}
+.instruction__widget h2 {
+  font-weight: bold;
+}
+
 .sidebar__widget {
   position: sticky;
   top: 0;
