--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2733,3 +2733,25 @@ margin-bottom: 20px;
 .qbox .form-check {
   font-size: 14px;
 }
+
+/*
+    floating button for support  
+*/
+
+.float{
+	position:fixed;
+	width:60px;
+	height:60px;
+	bottom:40px;
+	right:40px;
+	background-color:#0C9;
+	color:#FFF;
+	border-radius:50px;
+	text-align:center;
+	box-shadow: 2px 2px 3px #999;
+    z-index: 5;
+}
+
+.my-float{
+	margin-top:22px;
+}
